--- a/css/styles.css
+++ b/css/styles.css
@@ -95,6 +95,14 @@ padding: 0 15px;
 }
 .main-navi-link{
     padding: 24px 0;
+}
+.menu-gap::after{
+    content:'';
+    display: block;
+    width: 48px;
+    height: 4px;
+    border-radius: 2px;
+    background: var(--OCEAN, #404BBF);
 
 }
 
@@ -145,7 +153,7 @@ padding: 0 15px;
     color: var(--NAVY-BLUE, #2E2F42);
     font-family:  'Roboto', sans-serif;
     font-size: 16px;
-    line-height: 1.5; /* 150% */
+    line-height: 1.4; /* 150% */
     letter-spacing:0.02em;
     
 }
@@ -219,6 +227,11 @@ padding: 0 15px;
     font-size: 56px;
     letter-spacing:0.02em;
     padding: 188px 0;
+    background-image:linear-gradient( 
+        rgba(46, 47, 66, 0.70),
+        rgba(46, 47, 66, 0.70)), 
+    url(../images/people-office.jpg);
+    background-size: cover;
   
 }
 
@@ -424,6 +437,30 @@ margin-bottom: 8px;
     color: #434455;
 }
 
+.social-list{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    column-gap: 24px;
+    padding-top: 8px;
+}
+.social-list-link{
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color:#4D5AE5;
+}
+
+.social-list-icon{
+    width: 12px;
+    height: 12px;
+}
+
 .name-portfolio{
     padding-top: 32px;
     padding-bottom: 32px;
@@ -461,11 +498,15 @@ margin-bottom: 8px;
 
 /*.menu{ }*/
 .menu-item-new{
+    position: relative;
+    overflow: hidden;
     width: calc((100% - 48px) / 3);
+}
+.menu-item-new:hover .overlay{
+    transform: translateY(0%);
 }
 .foto-google{
     flex-shrink: 0;
- 
     background: var(--WHITE, #FFF);
 }
 
@@ -483,6 +524,20 @@ margin-bottom: 8px;
     border: 1px solid #e7e9fc;
     border-top: none; 
     flex-wrap: wrap; 
+}
+
+.overlay{
+    position:absolute;
+    background: var(--IRIS, #4D5AE5);
+    width: 360px;
+    height: 300px;
+    top: 0;
+    left: 0;
+    padding: 40px 32px 164px;
+    transform: translateY(100%);
+    transition: transform 250ms linear;
+color:#f4f4fd ;
+color: var(--CLOUD, #F4F4FD);
 }
 .container-four{
     padding-bottom: 120px;
@@ -559,8 +614,21 @@ height: 21px;
     flex-shrink: 0;
 }
 
+.container-footer{
+    display: flex;
+    justify-content: center;
+}
+.social-list-center{
+    column-gap: 16px;
+}
 
-
+.paragraph-footer{
+    
+    color: var(--WHITE, #FFF);
+    font-family: 'Roboto', sans-serif;
+    display: flex;
+    justify-content: center;
+}
 
 /*==================================== FOOTER ================================*/
 
