--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,7 @@
 /*=============== COMON  STYLYS============================*/
-
+body {
+  font-family: "Roboto", sans-serif;
+}
 .list {
   list-style-type: none;
 }
@@ -60,7 +62,6 @@ img {
 
 .body-main {
   background: #fff;
-  font-family: "Roboto", sans-serif;
   color: #434455;
 }
 
@@ -93,12 +94,12 @@ img {
   display: flex;
   align-items: center;
   margin-right: 76px;
-
   margin-left: auto;
 }
 .main-navi-link {
   padding: 24px 0;
 }
+
 .menu-gap::after {
   content: "";
   display: block;
@@ -113,7 +114,6 @@ img {
   width: 456px;
   height: 72px;
   flex-shrink: 0;
-
   padding-top: 25.5px;
   padding-bottom: 25.5px;
   align-items: center;
@@ -123,7 +123,6 @@ img {
 .main-logo {
   display: flex;
   color: var(--NAVY-BLUE, #2e2f42);
-  font-family: "Raleway", sans-serif;
   font-size: 18px;
   text-transform: uppercase;
   font-weight: 700;
@@ -133,9 +132,7 @@ img {
 }
 .logo {
   color: var(--IRIS, #4d5ae5);
-  font-family: "Raleway", sans-serif;
   font-size: 18px;
-  font-style: normal;
   letter-spacing: 0.03em;
   text-transform: uppercase;
 }
@@ -150,9 +147,8 @@ img {
 
 .menu-item {
   color: var(--NAVY-BLUE, #2e2f42);
-  font-family: "Roboto", sans-serif;
   font-size: 16px;
-  line-height: 1.4; /* 150% */
+  line-height: 1.4;
   letter-spacing: 0.02em;
 }
 .menu-item:hover {
@@ -201,7 +197,6 @@ img {
 
 .menu-adress-item {
   color: var(--SLATE, #434455);
-  font-family: "Roboto", sans-serif;
   font-size: 16px;
   letter-spacing: 0.02em;
 }
@@ -217,7 +212,6 @@ img {
   background-color: #2e2f42;
   color: var(--WHITE, #fff);
   text-align: center;
-  font-family: "Roboto", sans-serif;
   font-size: 56px;
   letter-spacing: 0.02em;
   padding: 188px 0;
@@ -235,7 +229,6 @@ img {
   font-size: 56px;
   line-height: 1.07;
   letter-spacing: 0.02em;
-
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 48px;
@@ -243,9 +236,7 @@ img {
 }
 .button-main {
   color: var(--WHITE, #fff);
-  font-family: "Roboto", sans-serif;
   font-size: 16px;
-  font-style: normal;
   letter-spacing: 0.64px;
   background: var(--IRIS, #4d5ae5);
   font-weight: 500;
@@ -267,13 +258,10 @@ img {
 
 .button {
   color: var(--WHITE, #fff);
-  /* Button Text */
-  font-family: "Roboto", sans-serif;
   font-size: 16px;
-  font-style: normal;
   font-weight: 500;
-  line-height: 24px; /* 150% */
-  letter-spacing: 0.64px;
+  line-height: 1.5;
+  letter-spacing: 0.4em;
 }
 .button-main:hover {
   background-color: #404bbf;
@@ -288,13 +276,40 @@ img {
 
 .section-benefits {
   color: var(--WHITE, #fff);
-
-  font-family: "Roboto", sans-serif;
   font-size: 56px;
-  font-style: normal;
   letter-spacing: 1.12px;
   padding: 120px 0 120px;
 }
+.benefits-icon {
+}
+.visually-hidden {
+}
+.icon-list {
+  display: flex;
+  column-gap: 24px;
+  justify-content: center;
+}
+.icon-item {
+  border-radius: 4px;
+  border: 1px solid var(--LIGHT-SLATE, #8e8f99);
+  background: var(--CLOUD, #f4f4fd);
+  width: 264px;
+  height: 112px;
+  flex-shrink: 0;
+  display: flex;
+}
+.benefits-link-icon {
+}
+.benefits-social-icon {
+  width: 64px;
+  height: 64px;
+  flex-shrink: 0;
+  background-color: #4d5ae5;
+  align-items: center;
+  justify-content: center;
+  margin: 24px 100px;
+}
+
 .container-benefits {
 }
 
@@ -320,9 +335,7 @@ img {
 }
 .three-title {
   color: var(--NAVY-BLUE, #2e2f42);
-  font-family: "Roboto", sans-serif;
   font-size: 20px;
-  font-style: normal;
   letter-spacing: 0.4px;
   font-weight: 500;
   line-height: 1.2;
@@ -334,9 +347,7 @@ img {
 }
 .paragraph {
   color: var(--SLATE, #434455);
-  font-family: "Roboto", sans-serif;
   font-size: 16px;
-  font-style: normal;
   letter-spacing: 0.32px;
   line-height: 1.5;
 }
@@ -352,14 +363,11 @@ img {
 .title-two {
   color: var(--NAVY-BLUE, #2e2f42);
   text-align: center;
-  font-family: "Roboto", sans-serif;
   font-size: 36px;
-  font-style: normal;
-  letter-spacing: 0.72px;
+  letter-spacing: 0.02em;
   text-transform: capitalize;
   line-height: 1.11;
   font-weight: 500;
-
   margin-bottom: 72px;
 }
 .menu-list {
@@ -397,10 +405,8 @@ img {
 .three-title-foto {
   color: var(--NAVY-BLUE, #2e2f42);
   text-align: center;
-  font-family: "Roboto", sans-serif;
   font-size: 20px;
-  font-style: normal;
-  letter-spacing: 0.4px;
+  letter-spacing: 0.02em;
   font-weight: 500;
   line-height: 1.2;
   margin-bottom: 8px;
@@ -409,10 +415,7 @@ img {
 .paragraph-foto {
   color: var(--SLATE, #434455);
   text-align: center;
-  font-family: "Roboto", sans-serif;
   font-size: 16px;
-  font-style: normal;
-  letter-spacing: 0.32px;
   letter-spacing: 0.02em;
   color: #434455;
 }
@@ -428,7 +431,6 @@ img {
   display: flex;
   justify-content: center;
   align-items: center;
-
   width: 40px;
   height: 40px;
   border-radius: 50%;
@@ -464,12 +466,10 @@ img {
 .title-portfolio {
   color: var(--NAVY-BLUE, #2e2f42);
   text-align: center;
-  font-family: "Roboto", sans-serif;
   font-size: 36px;
-  font-style: normal;
   font-weight: 700;
-  line-height: 1.11; /* 111.111% */
-  letter-spacing: 0.72px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
   text-transform: capitalize;
   margin-bottom: 72px;
   flex-wrap: wrap;
@@ -536,27 +536,22 @@ img {
 
 .link-basement {
   color: var(--IRIS, #4d5ae5);
-  font-family: "Raleway", sans-serif;
   font-size: 18px;
-  font-style: normal;
   font-weight: 700;
-  line-height: 1.17; /* 116.667% */
-  letter-spacing: 0.54px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
   text-transform: uppercase;
   display: inline-block;
-
   width: 44px;
   height: 21px;
   margin-bottom: 16px;
 }
 .span-basement {
-  font-family: "Raleway", sans-serif;
   font-size: 18px;
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #f4f4fd;
-
   width: 71px;
   height: 21px;
 }
@@ -568,12 +563,10 @@ img {
 
 .paragraph-basement {
   color: var(--CLOUD, #f4f4fd);
-  font-family: "Roboto", sans-serif;
   font-size: 16px;
-  font-style: normal;
   font-weight: 400;
-  line-height: 1.5; /* 150% */
-  letter-spacing: 0.32px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
   width: 264px;
 }
 
@@ -592,7 +585,6 @@ img {
 
 .paragraph-footer {
   color: var(--WHITE, #fff);
-  font-family: "Roboto", sans-serif;
   display: flex;
   justify-content: center;
 }
