--- a/css/styles.css
+++ b/css/styles.css
@@ -68,7 +68,12 @@ img {
 /*================ COMON  STYLES ==============================*/
 
 /*================= HEDER STYLES ==============================*/
-
+.menu-gap {
+  gap: 40px;
+  position: relative;
+  color: #404bbf;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 .container-heder {
   display: flex;
   justify-content: space-between;
@@ -79,14 +84,13 @@ img {
 }
 .header-main {
   border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 /*.container-heder-main{
     display: flex; 
 }*/
-.menu-gap {
-  gap: 40px;
-}
 
 /*navigation + header*/
 
@@ -107,6 +111,9 @@ img {
   height: 4px;
   border-radius: 2px;
   background: var(--OCEAN, #404bbf);
+  position: absolute;
+  left: 0;
+  bottom: -1px;
 }
 
 .main-navigation {
@@ -199,6 +206,7 @@ img {
   color: var(--SLATE, #434455);
   font-size: 16px;
   letter-spacing: 0.02em;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 /*========================== ADRES ===============================*/
 
@@ -206,6 +214,9 @@ img {
 .container-first {
   height: 600px;
   flex-shrink: 0;
+  max-width: 1440px;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .main-section-one {
@@ -254,6 +265,7 @@ img {
   display: block;
   margin-left: auto;
   margin-right: auto;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button {
@@ -379,6 +391,8 @@ img {
   align-items: center;
   gap: 24px;
   display: flex;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 /*.list{}*/
@@ -426,6 +440,9 @@ img {
   align-items: center;
   column-gap: 24px;
   padding-top: 8px;
+}
+
+.social-list-item {
 }
 .social-list-link {
   display: flex;
