--- a/css/styles.css
+++ b/css/styles.css
@@ -214,7 +214,7 @@ img {
 .container-first {
   height: 600px;
   flex-shrink: 0;
-  max-width: 1440px;
+
   background-repeat: no-repeat;
   background-position: center;
 }
@@ -292,35 +292,6 @@ img {
   letter-spacing: 1.12px;
   padding: 120px 0 120px;
 }
-.benefits-icon {
-}
-.visually-hidden {
-}
-.icon-list {
-  display: flex;
-  column-gap: 24px;
-  justify-content: center;
-}
-.icon-item {
-  border-radius: 4px;
-  border: 1px solid var(--LIGHT-SLATE, #8e8f99);
-  background: var(--CLOUD, #f4f4fd);
-  width: 264px;
-  height: 112px;
-  flex-shrink: 0;
-  display: flex;
-}
-.benefits-link-icon {
-}
-.benefits-social-icon {
-  width: 64px;
-  height: 64px;
-  flex-shrink: 0;
-  background-color: #4d5ae5;
-  align-items: center;
-  justify-content: center;
-  margin: 24px 100px;
-}
 
 .container-benefits {
 }
@@ -345,6 +316,25 @@ img {
   width: calc((100% - 72px) / 4);
   margin-bottom: 8px;
 }
+
+.icon-container {
+  border-radius: 4px;
+  border: 1px solid var(--LIGHT-SLATE, #8e8f99);
+  background: var(--CLOUD, #f4f4fd);
+  width: 264px;
+  height: 112px;
+  flex-shrink: 0;
+  display: flex;
+  column-gap: 24px;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 8px;
+}
+.benefits-social-icon {
+  display: flex;
+  background-color: #404bbf;
+}
+
 .three-title {
   color: var(--NAVY-BLUE, #2e2f42);
   font-size: 20px;
