--- a/css/styles.css
+++ b/css/styles.css
@@ -227,6 +227,7 @@ img {
   color: var(--WHITE, #fff);
   text-align: center;
   font-size: 56px;
+  max-width: 1440px;
   letter-spacing: 0.02em;
   padding: 188px 0;
   background-image: linear-gradient(
@@ -235,6 +236,8 @@ img {
     ),
     url(../images/people-office.jpg);
   background-size: cover;
+  background-position: center;
+  margin: 0 auto;
 }
 
 /*.container-effective{}*/
@@ -336,13 +339,13 @@ img {
 .benefits-social-icon {
   display: flex;
 }
-/* .benefits-link-icon {
+.benefits-link-icon {
   width: 64px;
   height: 64px;
   flex-shrink: 0;
   align-items: center;
   justify-content: center;
-} */
+}
 
 .three-title {
   color: var(--NAVY-BLUE, #2e2f42);
