--- a/css/styles.css
+++ b/css/styles.css
@@ -537,6 +537,26 @@ img {
   color: #f4f4fd;
   color: var(--CLOUD, #f4f4fd);
 }
+.overlay:hover {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  transform: translateY(0%);
+}
+
+.text-stylish {
+  position: absolute;
+  top: 0;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
+  padding: 40px 32px;
+  background-color: #4d5ae5;
+  height: 100%;
+  width: 100%;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 .container-four {
   padding-bottom: 120px;
 }
@@ -591,6 +611,8 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   width: 264px;
+  font-weight: 500;
+  margin-bottom: 16px;
 }
 
 .container-endee {
@@ -604,6 +626,20 @@ img {
 }
 .social-list-center {
   column-gap: 16px;
+  gap: 16px;
+}
+
+.social-list-link {
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.social-list-item :hover {
+  background-color: #31d0aa;
+  background-color: #31d0aa;
+}
+.social-list-icon {
+  width: 24px;
+  height: 24px;
+  fill: #f4f4fd;
 }
 
 .paragraph-footer {
