--- a/css/styles.css
+++ b/css/styles.css
@@ -307,6 +307,7 @@ img {
   align-items: flex-start;
   flex-wrap: wrap;
   row-gap: 48px;
+  gap: 24px;
 }
 
 .menu-gap-next {
@@ -502,6 +503,9 @@ img {
 }
 .menu-item-new:hover .overlay {
   transform: translateY(0%);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  transform: translateY(0%);
 }
 .foto-google {
   flex-shrink: 0;
@@ -537,11 +541,11 @@ img {
   color: #f4f4fd;
   color: var(--CLOUD, #f4f4fd);
 }
-.overlay:hover {
+/* .overlay:hover {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
   transform: translateY(0%);
-}
+} */
 
 .text-stylish {
   position: absolute;
