--- a/css/styles.css
+++ b/css/styles.css
@@ -102,6 +102,7 @@ img {
 }
 .main-navi-link {
   padding: 24px 0;
+  color: #404bbf;
 }
 
 .menu-gap::after {
@@ -456,7 +457,17 @@ img {
   border-radius: 50%;
   background-color: #4d5ae5;
 }
+.social-list-link:hover {
+  background-color: #404bbf;
+}
+.social-list-link:focus {
+  background-color: #404bbf;
+}
 
+.social-list-three {
+  width: 12;
+  height: 12;
+}
 .social-list-icon {
   width: 12px;
   height: 12px;
@@ -500,6 +511,7 @@ img {
   position: relative;
   overflow: hidden;
   width: calc((100% - 48px) / 3);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .menu-item-new:hover .overlay {
   transform: translateY(0%);
@@ -540,6 +552,8 @@ img {
   transition: transform 250ms linear;
   color: #f4f4fd;
   color: var(--CLOUD, #f4f4fd);
+  position: relative;
+  overflow: hidden;
 }
 /* .overlay:hover {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
@@ -640,7 +654,10 @@ img {
   background-color: #31d0aa;
   background-color: #31d0aa;
 }
-.social-list-icon {
+/* .social-list-icon {
+  fill: #f4f4fd;
+} */
+.footer-social-link {
   width: 24px;
   height: 24px;
   fill: #f4f4fd;
