--- a/css/styles.css
+++ b/css/styles.css
@@ -465,8 +465,8 @@ img {
 }
 
 .social-list-three {
-  width: 12;
-  height: 12;
+  width: 16px;
+  height: 16px;
 }
 .social-list-icon {
   width: 12px;
