--- a/css/styles.css
+++ b/css/styles.css
@@ -444,6 +444,7 @@ img {
   align-items: center;
   column-gap: 24px;
   padding-top: 8px;
+  gap: 24px;
 }
 
 .social-list-item {
@@ -471,6 +472,7 @@ img {
 .social-list-icon {
   width: 12px;
   height: 12px;
+  fill: #f4f4fd;
 }
 
 .name-portfolio {
@@ -650,6 +652,9 @@ img {
 .social-list-link {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.social-list-link:focus {
+  background-color: #31d0aa;
+}
 .social-list-item :hover {
   background-color: #31d0aa;
   background-color: #31d0aa;
@@ -667,8 +672,13 @@ img {
   color: var(--WHITE, #fff);
   display: flex;
   justify-content: center;
+  margin-bottom: 16px;
+  font-weight: 500;
 }
-
+.paragraph-social {
+  margin-bottom: 16px;
+  font-weight: 500;
+}
 /*==================================== FOOTER ================================*/
 
 /*================================== BODY ====================================*/
