--- a/css/styles.css
+++ b/css/styles.css
@@ -395,8 +395,6 @@ img {
   align-items: center;
   gap: 24px;
   display: flex;
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 /*.list{}*/
@@ -409,6 +407,11 @@ img {
   justify-content: center;
   align-items: center;
   border-radius: 0px 0px 4px 4px;
+}
+
+.menu-item-shadow {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .menu-item-border {
@@ -508,7 +511,15 @@ img {
   flex-wrap: wrap;
 }
 
-/*.menu{ }*/
+.menu-list-stylish {
+  box-shadow: зі значенням 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+.menu-list-stylish:hover {
+  transform: translateY(0%);
+}
+
+/* .menu{ } */
 .menu-item-new {
   position: relative;
   overflow: hidden;
@@ -652,16 +663,20 @@ img {
 .social-list-link {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.social-list-link:focus {
+/* .social-list-link:focus {
   background-color: #31d0aa;
-}
-.social-list-item :hover {
-  background-color: #31d0aa;
-  background-color: #31d0aa;
-}
-/* .social-list-icon {
-  fill: #f4f4fd;
 } */
+/* .social-list-item :hover {
+  background-color: #31d0aa;
+  background-color: #31d0aa;
+} */
+.social-list-link:hover {
+  background-color: #404bbf;
+}
+
+.social-list-icon:focus {
+  background-color: #404bbf;
+}
 .footer-social-link {
   width: 24px;
   height: 24px;
