--- a/css/styles.css
+++ b/css/styles.css
@@ -568,11 +568,10 @@ img {
   position: relative;
   overflow: hidden;
 }
-/* .overlay:hover {
+.overlay:hover {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-  transform: translateY(0%);
-} */
+}
 
 .text-stylish {
   position: absolute;
@@ -670,6 +669,14 @@ img {
   background-color: #31d0aa;
   background-color: #31d0aa;
 } */
+
+.footer-link:hover {
+  background-color: #31d0aa;
+}
+
+.footer-link:focus {
+  background-color: #31d0aa;
+}
 .social-list-link:hover {
   background-color: #404bbf;
 }
